<resources>
    <string name="app_name">Rock Paper Scissors</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="todo">TODO</string>
    <string name="computer">Computer</string>
    <string name="winner">Winner</string>
    <string name="start">Start!</string>
    <string name="scissors">Scissors</string>
    <string name="rock">Rock</string>
    <string name="player">Player</string>
    <string name="paper">Paper</string>
</resources>