<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_topInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_an_option"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="299dp"
        android:layout_height="216dp"
        app:layout_constraintBottom_toTopOf="@+id/winner_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_btn">

        <TextView
            android:id="@+id/computer_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer"
            app:layout_constraintBottom_toTopOf="@+id/computer_imgV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/player_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/player_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player"
            app:layout_constraintBottom_toTopOf="@+id/player_imgV"
            app:layout_constraintEnd_toStartOf="@+id/computer_tv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/player_imgV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:importantForAccessibility="no"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/computer_imgV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_tv"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/computer_imgV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:importantForAccessibility="no"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/player_imgV"
            app:layout_constraintTop_toBottomOf="@+id/computer_tv"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/winner_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/start_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_topInfo">

        <ImageButton
            android:id="@+id/rock_IBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:importantForAccessibility="no"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/rock_tv"
            app:layout_constraintEnd_toStartOf="@+id/paper_IBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rock" />

        <ImageButton
            android:id="@+id/paper_IBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/paper_tv"
            app:layout_constraintEnd_toStartOf="@+id/scissors_iBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rock_IBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/paper"
            tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/scissors_iBtn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="TODO"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/scissors_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/paper_IBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/scissor"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:id="@+id/rock_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/rock"
            app:layout_constraintEnd_toStartOf="@+id/paper_IBtn"
            app:layout_constraintHorizontal_bias="0.432"
            app:layout_constraintStart_toStartOf="@+id/rock_IBtn"
            app:layout_constraintTop_toBottomOf="@+id/rock_IBtn" />

        <TextView
            android:id="@+id/paper_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="31dp"
            android:text="@string/paper"
            app:layout_constraintEnd_toEndOf="@+id/paper_IBtn"
            app:layout_constraintStart_toStartOf="@+id/paper_IBtn"
            app:layout_constraintTop_toBottomOf="@+id/paper_IBtn" />

        <TextView
            android:id="@+id/scissors_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scissors"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/scissors_iBtn"
            app:layout_constraintTop_toBottomOf="@+id/scissors_iBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>